# DiameterAlgorithm

./: .gitignore  .travis.yml  LICENSE.txt  README.rst  compilar.sh  executar.sh  genindex.html  index.html  input-file.txt  objects.inv  output-file.txt  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt
_sources/: index.rst.txt
docs/: conf.py  index.rst
src/diameter/: __main__.py
src/diameter/algorithms/: diameter.py  shortest_path.py
src/diameter/model/: graph.py
tests/: test_diameter.py  test_graph.py  test_shortest_path.py  test_ua_functional.py  test_worst_case.py
