[metadata]
name = DiameterAlgorithm
# Version needs regex in setup.py.
url = https://github.com/victorgveloso/DiameterAlgorithm
license = BSD-3-Clause
author = Victor Guerra Veloso
author_email = victorgvbh@gmail.com
description = A master project and analysis of algorithms' work
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    diameter = diameter

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    diameter
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
# slice notation whitespace, invalid
    E203
# import at top, too many circular import fixes
    E402
# line length, handled by bugbear B950
    E501
# bare except, handled by bugbear B001
    E722
# bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
# __init__ module exports names
    src/flask/__init__.py: F401